--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- Jquery Script -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="jquery.js"></script>
   </head>
   
